--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "dependencies": {
     "@langchain/anthropic": "^0.3.8",
+    "@langchain/core": "^0.3.19",
+    "@langchain/google-genai": "^0.1.4",
     "@langchain/langgraph": "^0.2.23",
     "@langchain/langgraph-checkpoint-mongodb": "^0.0.4",
     "@langchain/mongodb": "^0.1.0",
